--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>点击下载示例</h1>
     <p>点击下面的按钮下载文件：</p>
-    <a href="https://example.com/your-file.pdf" download>
+    <a href="https://raw.githubusercontent.com/gpt89/gpt89.github.io/main/Jasmine.plist" download>
         <button>安装</button>
     </a>
 </body>
