--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>tiktok安装</title>
+    <title>点击安装示例</title>
 </head>
 <body>
-    <h1>点击下载示例</h1>
-    <p>点击下面的按钮下载文件：</p>
-    <a href="https://raw.githubusercontent.com/gpt89/gpt89.github.io/main/Jasmine.plist" download>
-        <button>安装</button>
+    <h1>点击安装示例</h1>
+    <p>点击下面的按钮安装应用：</p>
+    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/gpt89/gpt89.github.io/main/Jasmine.plist">
+        <button>安装应用</button>
     </a>
 </body>
 </html>
