--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>点击安装示例</h1>
     <p>点击下面的按钮安装应用：</p>
-    <a href="itms-services://?action=download-manifest&url=https://github.com/gpt89.github.io/main/Jasmine.plist">
+    <a href="itms-services://?action=download-manifest&url=https://github.com/gpt89/gpt89.github.io/blob/main/Jasmine.plist">
         <button>安装应用</button>
     </a>
 </body>
